# streamfinity_fastapi

./: Dockerfile  pyproject.toml
.github/workflows/: main.yaml
k8s/: deployment.yaml  service.yaml
streamfinity_fastapi/: db.py  streamfinity.py
streamfinity_fastapi/db/: streamfinity.db
streamfinity_fastapi/routers/: actors.py  movies.py  subscriptions.py  token.py  users.py
streamfinity_fastapi/schemas/: movie_actor_schema.py  subscription_schema.py  token_schema.py  user_schema.py
streamfinity_fastapi/security/: hashing.py
tests/: conftest.py  test_actors_api.py  test_movies_api.py  test_subscriptions_api.py  test_users_api.py
tests/db/: streamfinity_test.db
