[tool.poetry]
name = "streamfinity-fastapi"
version = "0.1.0"
description = ""
authors = ["jy <a7032181@gmail.com>"]
readme = "README.md"
packages = [{include = "streamfinity_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
